--- a/Arvy/Services.html
+++ b/Arvy/Services.html
@@ -70,7 +70,7 @@
 <div class="header">
   <article>
     <div class="gjlogo">
-       <a href="index.html"><img src="images/logo1.png" style="width: 100px;height: 60px; margin-bottom: 10px;"></a>
+       <a href="index.html"><img src="images/logo.png" style="width: 100px;height: 60px; margin-bottom: 10px;"></a>
          </div>
     
     <!--    
