--- a/Arvy/index.html
+++ b/Arvy/index.html
@@ -48,7 +48,7 @@
 				<i class="icon-remove menu-close" style="margin-top: 20px;"></i>
 								<a href="index.html" >Home</a>
 								<a href="about.html" >About</a>
-                <a href="Services.html" >faqs</a>
+                <a href="faq.html" >faqs</a>
 
 								
 								<a href="Services.html" >Services</a>
@@ -62,7 +62,21 @@
 
 			<!-- Menu button -->
 			<div id="menuToggle"><i class="icon-reorder"></i></div>
+
 		</nav>
+        <section id="header" class="header">
+<div class="header">
+  <article>
+    <div class="gjlogo">
+       <a href="index.html"><img src="images/logo.png" style="width: 90px;height: 50px; margin-bottom: 10px; margin-top: 20px;"></a>
+         </div>
+    
+    <!--    
+
+ -->
+  </article>
+  
+</div></section>
 
 		<section id="home-slider" class="home-slider"><!-- Fullscreen slider -->
 <div id="slides">
