--- a/Arvy/index.html
+++ b/Arvy/index.html
@@ -68,7 +68,7 @@
 <div class="header">
   <article>
     <div class="gjlogo">
-       <a href="index.html"><img src="images/logo.png" style="width: 90px;height: 50px; margin-bottom: 10px; margin-top: 20px;"></a>
+       <a href="index.html"><img src="images/logo.png" style="width: 90px;height: 50px; margin-bottom: 10px;"></a>
          </div>
     
     <!--    
@@ -84,7 +84,7 @@
     <li>
         <div style="background-image: url('images/Y.jpg');" class="fullscreen-image">
       </div>
-       <div class="header-top" style="width: 400px; height: 350px; margin-bottom: 100px;background-image: url('images/logo1.png'); background-size: cover;">
+       <div class="header-top" style="width: 400px; height: 350px; margin-bottom: 100px; margin-top: 10px; background-image: url('images/logo1.png'); background-size: cover;">
       
       </div>
       <br>
