--- a/Arvy/index.html
+++ b/Arvy/index.html
@@ -88,7 +88,7 @@
       
       </div>
       <br>
-      <div class="header-center1 fade-in">
+      <div class="header-center1 fade-in" style="margin-top: 15px;">
        
       <br>
         <h1 class="fittext white">
