few changes made for header

--- a/Arvy/Services.html
+++ b/Arvy/Services.html
@@ -66,11 +66,11 @@
       <!-- Menu button -->
       <div id="menuToggle"><i class="icon-reorder"></i></div>
     </nav>
-    <section id="header" class="header">
+        <section id="header" class="header">
 <div class="header">
   <article>
     <div class="gjlogo">
-       <a href="index.html"><img src="images/logo.png" style="width: 90px;height: 50px; margin-bottom: 10px;"></a>
+       <a href="index.html"><img src="images/logo.png" style="width: 110px;height: 62px;"></a>
          </div>
     
     <!--    
