--- a/Arvy/about.html
+++ b/Arvy/about.html
@@ -66,11 +66,11 @@
 			<!-- Menu button -->
 			<div id="menuToggle"><i class="icon-reorder"></i></div>
 		</nav>
-		<section id="header" class="header">
+        <section id="header" class="header">
 <div class="header">
   <article>
     <div class="gjlogo">
-       <a href="index.html"><img src="images/logo.png" style="width: 90px;height: 50px; margin-bottom: 10px;"></a>
+       <a href="index.html"><img src="images/logo.png" style="width: 110px;height: 62px;"></a>
          </div>
     
     <!--    
@@ -151,20 +151,21 @@
            
            <p>
            <span style="color: rgb(255, 255, 255); font-size: 20px;">
-   Our small but passion driven work shop/ facility designed effectively & efficiently with skilled man and best quality tools.
+Our small but for passion-driven workshop/ facility designed effectively & efficiently with the skilled man and best quality tools.
     </span>
   </p>
   <p>
     <span style="color: rgb(247, 247, 247); font-size: 20px;">
-   After contribtion in producing million of auto parts for motorcycle & cars in press shop, weld shop, plasting molding and assembly line under demanding schedule, quality & delivery with maintaining high quality standard of automobile industry.
+ After contribution in producing million of auto parts for motorcycle & cars in the press shop, weld shop, plastic molding and assembly line under demanding schedule, quality & delivery with maintaining the high-quality standard of the automobile industry.
     </span>
   </p>
   <p>
     <span style="color: rgb(247, 247, 247); font-size: 20px;">
-     This quality work experience molded with engginering college time passion to hand build /customize motorcycle with good servicebality, quality & timely delivery.
+    This quality work experience molded with engineering college time passion to hand-build /customize motorcycle with good serviceability, quality & timely delivery.
      <br>
      <br>
-    <span>We deliver hand built /customized motorcycle across India.</span> 
+    <span>
+We deliver a hand-built /customized motorcycle across India.</span> 
   </p>
 </article>
 </div>
