--- a/Arvy/faq.html
+++ b/Arvy/faq.html
@@ -70,11 +70,11 @@
       <!-- Menu button -->
       <div id="menuToggle"><i class="icon-reorder"></i></div>
     </nav>
-    <section id="header" class="header">
+        <section id="header" class="header">
 <div class="header">
   <article>
     <div class="gjlogo">
-       <a href="index.html"><img src="images/logo.png" style="width: 90px;height: 50px; margin-bottom: 10px;"></a>
+       <a href="index.html"><img src="images/logo.png" style="width: 110px;height: 62px;"></a>
          </div>
     
     <!--    
@@ -122,7 +122,7 @@
           </div>
 
           <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
-            <div class="card-body stunning_text" style="background-color:black; color: white;">
+            <div class="card-body stunning_text" style="background-color:#212121; color: white;">
               Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
             </div>
           </div>
@@ -135,7 +135,7 @@
             </h5>
           </div>
           <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
-            <div class="card-body stunning_text" style="background-color:black; color: white;">
+            <div class="card-body stunning_text" style="background-color:#212121; color: white;">
               Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
             </div>
           </div>
@@ -147,7 +147,7 @@
             </h5>
           </div>
           <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
-            <div class="card-body stunning_text" style="background-color:black; color: white;">
+            <div class="card-body stunning_text" style="background-color:#212121; color: white;">
               Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
             </div>
           </div>
