--- a/Arvy/index.html
+++ b/Arvy/index.html
@@ -69,7 +69,7 @@
 <div id="slides">
   <ul class="slides-container">
     <li>
-        <div style="background-image: url('images/Y.jpg');" class="fullscreen-image">
+        <div style="background-image: url('images/slide4.jpg');" class="fullscreen-image">
       </div>
        <div class="header-top" style="width: 400px; height: 350px; margin-bottom: 100px; margin-top: 10px; background-image: url('images/logo1.png'); background-size: cover;">
       
