--- a/Arvy/faq.html
+++ b/Arvy/faq.html
@@ -113,7 +113,7 @@
         <div class="card" style="background-color: black;">
           <div class="card-header" role="tab" id="headingOne">
             <h5 class="mb-0">
-              <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: red;">Question-1</a>
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="true" aria-controls="collapseOne" style="color: red;">What business we do? How can I purchase your bikes?</a>
             </h5>
               <!--
               #D3C475;
@@ -122,56 +122,59 @@
 
           <div id="collapseOne" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
             <div class="card-body stunning_text" style="background-color:#212121; color: white;">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+            Depending on your goals, budget and needs, we will consult with you to build your dream-bike.
+            You can also purchase from our inventory of bikes that were built for make to stock. You can contact us at info@arvymotorcycle.com or mobile number provided.
             </div>
           </div>
         </div>
          <div class="card" style="background-color: black;">
           <div class="card-header" role="tab" id="headingTwo">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="color: red;">Question-2 
+              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo" style="color: red;">Are your bikes street legal?
               </a>
             </h5>
           </div>
           <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo">
             <div class="card-body stunning_text" style="background-color:#212121; color: white;">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+             It depends on the state you live as we deliver bikes all over India with proper invoicing/billing.
             </div>
           </div>
         </div>
          <div class="card" style="background-color: black;">
           <div class="card-header" role="tab" id="headingThree">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="color: red;">Question-3</a>
+              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree" style="color: red;">Does your hand built bike come with a warranty?</a>
             </h5>
           </div>
           <div id="collapseThree" class="collapse" role="tabpanel" aria-labelledby="headingThree">
             <div class="card-body stunning_text" style="background-color:#212121; color: white;">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              We provide warranty on paint & customized parts. We only customize verified bikes having all required documents, service record and prefer least aged models or provided by you.
+
+              We stand by our work & your satisfactions is our greatest asset to grow our business brand. We maintain quality standard & check point at each process of built
             </div>
           </div>
         </div>
            <div class="card" style="background-color: black;">
           <div class="card-header" role="tab" id="headingfour">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="false" aria-controls="collapsefour" style="color: red;">Question-4</a>
+              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsefour" aria-expanded="false" aria-controls="collapsefour" style="color: red;">How much our bikes cost?</a>
             </h5>
           </div>
           <div id="collapsefour" class="collapse" role="tabpanel" aria-labelledby="headingfour">
             <div class="card-body stunning_text" style="background-color:#212121; color: white;">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+             It depends upon the agreed designs and once the design of bike is finalized – deposit of half with due remain of agreed cost to be paid upon completion & pre dispatch inspection or mutual agreed term.
             </div>
           </div>
         </div>
                 <div class="card" style="background-color: black;">
           <div class="card-header" role="tab" id="headingfive">
             <h5 class="mb-0">
-              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsefive" aria-expanded="false" aria-controls="collapsefive" style="color: red;">Question-5</a>
+              <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapsefive" aria-expanded="false" aria-controls="collapsefive" style="color: red;">For customization what you have to do?</a>
             </h5>
           </div>
           <div id="collapsefive" class="collapse" role="tabpanel" aria-labelledby="headingfour">
             <div class="card-body stunning_text" style="background-color:#212121; color: white;">
-              Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+              Either you provide your own bike with all necessary documents like registration copy, driving license, pollution certificate, insurance etc. or you can authorize us to purchase the bike as per our policy and your interest.
             </div>
           </div>
         </div>
