consultancy content added

--- a/Arvy/Services.html
+++ b/Arvy/Services.html
@@ -125,15 +125,34 @@
      
            
            <p>
+            <span style=" font-size: 20px; color: #D3C475;">
+              EDUCATIONAL INSTITUTIONS
+            </span>
+            <br>
            <span style="color: rgb(255, 255, 255); font-size: 20px;">
-   Our industry professionals modernize and standardize existing manufacturing facility with cost effective methods for quality product & services.
+
+
+
+Our Industry Expert provide training to Engineering Institution students to make them aware of industrial terminologies & systems in assistance with our facility.
     </span>
   </p>
   <p>
+     <span style=" font-size: 20px; color: #D3C475;">
+              MANUFACTURING INDUSTRY
+            </span>
+            <br>
     <span style="color: rgb(247, 247, 247); font-size: 20px;">
-Making business strategy is matter of days if product manufacturing is competitive.
+Also assist manufacturing industry to modernize existing facility to high quality standards and cost effective measures. Guide and control in formulating budgeting, business strategy etc.
+
+Skill Enhancement Program for industry supervisors and workers.
+
+Assist sick organization to make them a profitable organization by capacity utilization, productivity improvement, motivational technique and using effective management control system.
     </span>
   </p>
+   <span style=" font-size: 20px; color: #D3C475;">
+              For more details, contact us
+            </span>
+ 
 
 </article>
 </div>
