--- a/Arvy/index.html
+++ b/Arvy/index.html
@@ -162,7 +162,7 @@
 
 <script type="text/javascript">
   $(function(){
-      $('#footer').load( 'modules/footer.inc.html' );
+      $('#footer').load( './modules/footer.inc.html' );
   });
 </script>
 
