--- a/Arvy/Services.html
+++ b/Arvy/Services.html
@@ -53,7 +53,7 @@
                 <a href="faq.html" >Faqs</a>
                 
                 <a href="Services.html" >Consultancy</a>
-                <a href="#" >Our Work</a>
+                <a href="shop.html" >Shop</a>
                 
                 <a href="#" ><i class="icon-facebook"></i></a>
                 <a href="#" ><i class="icon-twitter"></i></a>
