--- a/Arvy/index.html
+++ b/Arvy/index.html
@@ -45,7 +45,7 @@
       <a href="about.html" >About</a>
       <a href="faq.html" >faqs</a>
       <a href="Services.html" >Consultancy</a>
-      <a href="#" >Our Work</a>
+      <a href="shop.html" >shop</a>
       <a href="#" ><i class="icon-facebook"></i></a>
       <a href="#" ><i class="icon-twitter"></i></a>
       <a href="#" ><i class="icon-envelope"></i></a>
