header-logo added

--- a/Arvy/shop.html
+++ b/Arvy/shop.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
     
-<meta http-equiv="content-type" content="text/html;charset=UTF-8" /><!-- /Added by HTTrack -->
+<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Arvy MotorCycle</title>
-<link rel="shortcut icon" href="images/logo1.png" />
+<link rel="shortcut icon" href="images/logo1_new.png" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
