--- a/Arvy/Services.html
+++ b/Arvy/Services.html
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Arvy MotorCycle</title>
-<link rel="shortcut icon" href="images/logo1.png" />
+<link rel="shortcut icon" href="images/logo1_new.png" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -49,7 +49,7 @@
         <!--<h1 class="logo"><a href="#home">Arvy<br> Motorcycle</a></h1>-->
         <i class="icon-remove menu-close"></i>
                 <a href="index.html" >Home</a>
-                <a href="About.html" >About</a>
+                <a href="about.html" >About</a>
                 <a href="faq.html" >Faqs</a>
                 
                 <a href="Services.html" >Consultancy</a>
