--- a/Arvy/about.html
+++ b/Arvy/about.html
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <title>Arvy MotorCycle</title>
-<link rel="shortcut icon" href="images/logo1.png" />
+<link rel="shortcut icon" href="images/logo1_new.png" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
