--- a/Arvy/faq.html
+++ b/Arvy/faq.html
@@ -5,7 +5,7 @@
 <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <title>Arvy Motorcycle</title>
-    <link rel="shortcut icon" href="images/favicon.png" />
+  <link rel="shortcut icon" href="images/logo1_new.png" />
 
 
 
