--- a/Arvy/index.html
+++ b/Arvy/index.html
@@ -5,7 +5,7 @@
   <title>Arvy MotorCycle</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="shortcut icon" href="images/logo1.png" />
+  <link rel="shortcut icon" href="images/logo1_new.png" />
   <!--CSS-->
   <link href="netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap.min.css" type="text/css" rel="stylesheet"/>
   <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
