--- a/Arvy/faq.html
+++ b/Arvy/faq.html
@@ -57,7 +57,7 @@
         <!--<h1 class="logo"><a href="#home">Arvy<br> Motorcycle</a></h1>-->
         <i class="icon-remove menu-close"></i>
                 <a href="index.html" >Home</a>
-                <a href="About.html" >About</a>
+                <a href="about.html" >About</a>
                 <a href="faq.html" >Faqs</a>
                 
                 <a href="Services.html" >Consultancy</a>
