--- a/Arvy/shop.html
+++ b/Arvy/shop.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+<!-- Added Comment at top -->
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
