font awesome modified

--- a/Arvy-new-temp/Motor-Project/index.html
+++ b/Arvy-new-temp/Motor-Project/index.html
@@ -10,7 +10,8 @@
      <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
      <link rel="stylesheet" type="text/css" href="css/style.css">
 
-     <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+     <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+     
      <script src="https://code.jquery.com/jquery-2.0.3.js" type="text/javascript"></script>
 
     <title>Bike Customization </title>
@@ -177,23 +178,23 @@ $(document).ready(function(){
           <div class="mb-5 flex-center">
 
             <!-- Facebook -->
-            <a class="fb-ic">
+            <a>
               <i class="fab fa-facebook-f fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
             <!-- Twitter -->
-            <a class="tw-ic">
+            <a>
               <i class="fab fa-twitter fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
             <!-- Google +-->
-            <a class="gplus-ic">
+            <a>
               <i class="fab fa-google-plus-g fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
             <!--Linkedin -->
-            <a class="li-ic">
+            <a>
               <i class="fab fa-linkedin-in fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
             <!--Instagram-->
-            <a class="ins-ic">
+            <a>
               <i class="fab fa-instagram fa-lg white-text mr-md-5 mr-3 fa-2x"> </i>
             </a>
             <!--Pinterest-->
