about page modified

--- a/Arvy-new-temp/Motor-Project/about.html
+++ b/Arvy-new-temp/Motor-Project/about.html
@@ -37,12 +37,31 @@
 </div>
 
     <!-- Page Content -->
-    <div class="container">
+
 
       <!-- Page Heading/Breadcrumbs -->
-      <h1 class="mt-4 mb-3">About
-        <small>Arvy Motorcycle</small>
-      </h1>
+      
+      <div class="container" style="margin-top: 40px;">
+  <div class="row-fluid">
+    <div class="stunning_text">
+      <div class="big-title  extra-large-text">
+        <div>
+          <h4 class="first-title">
+            <span style="color: red;">
+              Learn About
+            </span>
+          </h4>
+          <span style="color: red;">
+            Arvy Motorcycle
+          </span>
+          <h4 class="last-title">
+            <span style="color: red;">
+              Bike Custom Organization
+            </span>
+          </h4>
+        </div>
+      </div>
+    </div>
 
       <ol class="breadcrumb" style="background-color: transparent;">
         <li class="breadcrumb-item">
@@ -51,7 +70,7 @@
         <li class="breadcrumb-item active">About</li>
       </ol>
                  <div class="container-fluid">
-<div class="row">
+<!--<div class="row">
   <div class="col">
     <marquee style="color: rgba(329,56,56,.6); margin-bottom: 10px;"><h2>''Ride Safe Wear Helmet''</h2></marquee>
   </div>
