new pages added Arvy-new-temp

--- a/Arvy-new-temp/Motor-Project/navigation.html
+++ b/Arvy-new-temp/Motor-Project/navigation.html
@@ -18,10 +18,10 @@
             <a class="nav-link uppercase" href="about.html">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link uppercase" href="#">Consultancy</a>
+            <a class="nav-link uppercase" href="consultancy.html">Consultancy</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link uppercase" href="#">shop</a>
+            <a class="nav-link uppercase" href="shop.html">shop</a>
           </li>
 
           <li class="nav-item">
