--- a/Arvy-new-temp/Motor-Project/about.html
+++ b/Arvy-new-temp/Motor-Project/about.html
@@ -65,7 +65,7 @@
 
       <ol class="breadcrumb" style="background-color: transparent;">
         <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
+          <a class="link" href="index.html">Home</a>
         </li>
         <li class="breadcrumb-item active">About</li>
       </ol>
