--- a/Arvy-new-temp/Motor-Project/faq.html
+++ b/Arvy-new-temp/Motor-Project/faq.html
@@ -48,7 +48,7 @@
 
       <ol class="breadcrumb" style="background-color: transparent;">
         <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
+          <a class="link" href="index.html">Home</a>
         </li>
         <li class="breadcrumb-item active">FAQ</li>
       </ol>
