Final touches done

--- a/Arvy-new-temp/Motor-Project/about.html
+++ b/Arvy-new-temp/Motor-Project/about.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bike customization </title>
+    <title class="uppercase">ARVY MOTORCYCLE</title>
+    <link rel="shortcut icon" href="logo1_new.png" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -18,8 +19,10 @@
 
     <!-- Custom styles for this template -->
     <link href="css/modern-business.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
      <link href="css/style.css" rel="stylesheet">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+     
      <script>
      $(document).ready(function(){
         
@@ -39,7 +42,7 @@
 
   </head>
 
-  <body style="background-image: url('car.png'); background-size: cover; color: #ffffff;">
+  <body style="background-image: url('car.png'); background-size: cover; color: #ffffff; font-family: 'Roboto Slab', serif;">
 
     <!-- Navigation -->
         <div class="container-fluid" id="nav">
