--- a/Arvy-new-temp/Motor-Project/consultancy.html
+++ b/Arvy-new-temp/Motor-Project/consultancy.html
@@ -8,11 +8,13 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Bike customization </title>
+    <title class="uppercase">ARVY MOTORCYCLE</title>
+    <link rel="shortcut icon" href="logo1_new.png" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
      <link href="fonts/fontawesome-webfont.svg" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
      <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
      <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
@@ -42,7 +44,7 @@
 </head>
 
 
-<body style="background-image: url('car.png'); background-size: cover; color: #ffffff;">
+<body style="background-image: url('car.png'); background-size: cover; color: #ffffff; font-family: 'Roboto Slab', serif;">
 
     <!-- Navigation -->
         <div class="container-fluid" id="nav">
