--- a/Arvy-new-temp/Motor-Project/footer_consultancy.html
+++ b/Arvy-new-temp/Motor-Project/footer_consultancy.html
@@ -25,18 +25,18 @@
         
 
         <h3 style="color: white;">follow us</h3>
-        <a href="#">
-            <i class="icon-twitter medium-icon white-border">
-            </i>
-          </a>
-          <a href="#">
-            <i class="icon-facebook medium-icon white-border">
-            </i>
-          </a> 
-           <a href="#">
-            <i class="icon-instagram medium-icon white-border">
-            </i>
-          </a>
+        <a href="https://mobile.twitter.com/arvymotorcycle">
+          <i class="icon-twitter medium-icon white-border">
+          </i>
+        </a>
+        <a href="https://www.facebook.com/Arvy-Motorcycle-101190461293714/">
+          <i class="icon-facebook medium-icon white-border">
+          </i>
+        </a> 
+         <a href="https://www.instagram.com/arvymotorcycle/">
+          <i class="icon-instagram medium-icon white-border">
+          </i>
+        </a>
 <br>
 <br>
       
