--- a/Arvy-new-temp/Motor-Project/navigation.html
+++ b/Arvy-new-temp/Motor-Project/navigation.html
@@ -27,29 +27,45 @@
           <li class="nav-item">
        <a class="nav-link uppercase" href="faq.html">FAQ</a>
           </li>
+          <div class="container-fluid">
+            <div class="row">
               <li class="nav-item icon">
-               <a href="#">
+               <a href="https://www.instagram.com/arvymotorcycle/">
           <i class="icon-instagram icon">
           </i>
         </a>
           </li>
                  <li class="nav-item icon">
-               <a href="#">
+               <a href="https://www.facebook.com/Arvy-Motorcycle-101190461293714/">
           <i class="icon-facebook icon">
           </i>
         </a>
           </li>
           <li class="nav-item icon">
-                  <a href="#">
+                  <a href="https://mobile.twitter.com/arvymotorcycle">
           <i class="icon-twitter icon">
           </i>
 
         </a>
       </li>
         </ul>
+        </div>
+    </div>
       </div>
     </div>
   </nav>
+
+  <style>
+
+    @media only screen and (max-width: 600px) {
+	i {
+    display: inline-block;
+    padding-bottom: 20px;
+    padding-left: -10px;
+		
+	  }
+  }
+  </style>
 
 </body>
 </html>
