--- a/Arvy-new-temp/Motor-Project/faq.html
+++ b/Arvy-new-temp/Motor-Project/faq.html
@@ -8,12 +8,14 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title></title>
+    <title class="uppercase">ARVY MOTORCYCLE</title>
+    <link rel="shortcut icon" href="logo1_new.png" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
     <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
@@ -39,7 +41,7 @@
 
   </head>
 
-  <body style="background-image: url('car.png'); background-size: cover;">
+  <body style="background-image: url('car.png'); background-size: cover; font-family: 'Roboto Slab', serif;">
 
     <!-- Navigation -->
    
