--- a/Arvy-new-temp/Motor-Project/footer.html
+++ b/Arvy-new-temp/Motor-Project/footer.html
@@ -25,15 +25,15 @@
         
 
         <h3 style="color: white;">follow us</h3>
-        <a href="#">
+        <a href="https://mobile.twitter.com/arvymotorcycle">
             <i class="icon-twitter medium-icon white-border">
             </i>
           </a>
-          <a href="#">
+          <a href="https://www.facebook.com/Arvy-Motorcycle-101190461293714/">
             <i class="icon-facebook medium-icon white-border">
             </i>
           </a> 
-           <a href="#">
+           <a href="https://www.instagram.com/arvymotorcycle/">
             <i class="icon-instagram medium-icon white-border">
             </i>
           </a>
