--- a/Arvy-new-temp/Motor-Project/index.html
+++ b/Arvy-new-temp/Motor-Project/index.html
@@ -13,8 +13,10 @@
      <link href="https://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
      
      <script src="https://code.jquery.com/jquery-2.0.3.js" type="text/javascript"></script>
+     <link href="https://fonts.googleapis.com/css?family=Roboto+Slab&display=swap" rel="stylesheet">
 
-    <title>Bike Customization </title>
+     <title class="uppercase">ARVY MOTORCYCLE</title>
+     <link rel="shortcut icon" href="logo1_new.png" />
 
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -34,7 +36,7 @@ $(document).ready(function(){
 
   </head>
 
-  <body style="background-color:black;">
+  <body style="background-color:black; font-family: 'Roboto Slab', serif;">
     <style type="text/css">
       .logo{
         width: 400px;
