--- a/Arvy-new-temp/Motor-Project/connect.html
+++ b/Arvy-new-temp/Motor-Project/connect.html
@@ -82,7 +82,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <button class="open-button" onclick="openForm()">Open Form</button>
 
 <div class="form-popup" id="myForm">
-  <form action="/action_page.php" class="form-container">
+  <form action="#" class="form-container">
     <h1>Login</h1>
 
     <label for="email"><b>Email</b></label>
