--- a/Arvy-new-temp/Motor-Project/navigation.html
+++ b/Arvy-new-temp/Motor-Project/navigation.html
@@ -27,6 +27,9 @@
           <li class="nav-item">
        <a class="nav-link uppercase" href="faq.html">FAQ</a>
           </li>
+           <li class="nav-item">
+       <a class="nav-link uppercase" href="contact.html">Contact</a>
+          </li>
           <div class="container-fluid">
             <div class="row">
               <li class="nav-item icon">
