few changes made

--- a/Arvy-new-temp/Motor-Project/about.html
+++ b/Arvy-new-temp/Motor-Project/about.html
@@ -446,7 +446,7 @@ m4110 -1 c24 -21 24 -56 2 -77 -52 -46 -219 -52 -341 -13 -46 15 -82 29 -80
           <h2 class="uppercase"> WE GIVE HIGH VALUE TO SAFETY, QUALITY AND CUSTOMER SATISFACTION,</h2>
          <article>
           <p>
-            <span style="color: rgb(255, 255, 255); font-size: 18px";>Our small but passion-driven workshop/ facility designed effectively & efficiently with skilled men and best quality tools and handcrafted machines. </span>
+            <span style="color: rgb(255, 255, 255); font-size: 18px";>Our small but passion-driven workshop designed effectively & efficiently with fabrication facility- variety of fabrication tools machines, casting for aluminium/cooper, blasting facility, dedicated dust proof paint facility, assembly stations, design facility and skilled men. </span>
             </p>
 
           <p><span style="color: rgb(255, 255, 255); font-size: 18px";>After contribution in producing million of auto parts for motorcycle & cars in the press shop, weld shop, plastic molding and assembly line under demanding schedule, quality & delivery while maintaining the high-quality standard of the automobile industry</span></p>
