--- a/ayushi/index.html
+++ b/ayushi/index.html
@@ -56,7 +56,7 @@
 				<div class="container">
 					<div class="topbar_in">
 						<div class="logo">
-							<a href="#"><img src="img/logo/logo.png" alt="" /></a>
+							<a href="#"><img src="img/logo/mobile1.png" alt="" /></a>
 						</div>
 						<div class="trigger">
 							<a href="#">
@@ -168,7 +168,7 @@
 									</div>
 									<div class="rightbox">
 										<div class="about_title">
-											<h3>I'm Ayush Jangid and <span class="arlo_tm_animation_text_word"></span></h3>
+											<h3>I'm Ayushi Jangid and <span class="arlo_tm_animation_text_word"></span></h3>
 										</div>
 										<div class="text">
 											<p>Hi! My name is <span>Ayushi Jangid</span>. Ayushi Jangid is a young girl living in the incredible Pink City of India. She started exploring her passion for designing at the age of 15. It used to be very hard for her to extract time for the same because she was a medical student and was never very confident to talk to her parents to let her follow her dream. After the 12th board exams ended, she finally gathered enough courage to talk to her father and as always, daughters being the peaches to the fathers, he agreed.</p>
@@ -340,7 +340,7 @@
 								</div>
 								<div class="portfolio_list">
 									<ul class="gallery_zoom">
-									<li class=".animation">
+									<li class="animation">
 											<div class="inner">
 												<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Animate Image" data-category="Animation">
 													<a class="zoom" href="img/mandala/h6.jpg">
@@ -379,16 +379,6 @@
 													<a class="zoom" href="img/mandala/p1.jpg">
 														<img src="img/portfolio/600x600.jpg" alt="" />
 														<div class="main_image" data-img-url="img/mandala/p1.jpg"></div>
-													</a>
-												</div>
-											</div>
-										</li>
-										<li class="animation">
-											<div class="inner">
-												<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Animate Image" data-category="Animation">
-													<a class="zoom" href="img/portfolio/8.jpg">
-														<img src="img/portfolio/600x600.jpg" alt="" />
-														<div class="main_image" data-img-url="img/portfolio/8.jpg"></div>
 													</a>
 												</div>
 											</div>
@@ -447,7 +437,7 @@
 											</div>
 										</li>
 
-													<li class="animation">
+													<li class="art">
 											<div class="inner">
 												<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Animate Image" data-category="Animation">
 													<a class="zoom" href="img/artwork/a10.jpg">
