--- a/ayushi/index.html
+++ b/ayushi/index.html
@@ -340,12 +340,12 @@
 								</div>
 								<div class="portfolio_list">
 									<ul class="gallery_zoom">
-									<li class="animation">
+									<li class="art">
 											<div class="inner">
 												<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Animate Image" data-category="Animation">
-													<a class="zoom" href="img/mandala/h6.jpg">
+													<a class="zoom" href="img/artwork/h6.jpg">
 														<img src="img/portfolio/600x600.jpg" alt="" />
-														<div class="main_image" data-img-url="img/mandala/h6.jpg"></div>
+														<div class="main_image" data-img-url="img/artwork/h6.jpg"></div>
 													</a>
 												</div>
 											</div>
@@ -363,12 +363,12 @@
 											</div>
 										</li>
 
-												<li class="plant">
+												<li class="art">
 											<div class="inner">
 												<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Animate Image" data-category="Animation">
-													<a class="zoom" href="img/mandala/p5.jpg">
+													<a class="zoom" href="img/artwork/p5.jpg">
 														<img src="img/portfolio/600x600.jpg" alt="" />
-														<div class="main_image" data-img-url="img/mandala/p5.jpg"></div>
+														<div class="main_image" data-img-url="img/artwork/p5.jpg"></div>
 													</a>
 												</div>
 											</div>
@@ -447,12 +447,12 @@
 												</div>
 											</div>
 										</li>
-																<li class="animation">
+																<li class="art">
 											<div class="inner">
 												<div class="entry arlo_tm_portfolio_animation_wrap" data-title="Animate Image" data-category="Animation">
-													<a class="zoom" href="img/mandala/h4.jpg">
+													<a class="zoom" href="img/artwork/h4.jpg">
 														<img src="img/portfolio/600x600.jpg" alt="" />
-														<div class="main_image" data-img-url="img/mandala/h4.jpg"></div>
+														<div class="main_image" data-img-url="img/artwork/h4.jpg"></div>
 													</a>
 												</div>
 											</div>
